<resources>
    <string name="app_name">Mt Spokane Ski App</string>

    <!-- Location alert dialog -->
    <string name="alert_title">A note about location</string>
    <string name="alert_message">Your (precise) location is used to determine which runs you are on, and to track if you are no longer on the mountain. This data is gathered and used in the background <b>only while you are on the mountain</b>. Your location data never leaves your device.</string>
    <string name="alert_ok">Understood</string>

    <!-- Marker text -->
    <string name="your_location">You are here</string>
    <string name="more_info">Tap for additional stats</string>
    <string name="marker_altitude">Altitude: %d ft</string>
    <string name="marker_speed">Speed: %d mph</string>

    <!-- Run headers -->
    <string name="current_run">Currently on run: %s</string>
    <string name="current_chairlift">Currently on: %s</string>
    <string name="current_other">Currently at %s</string>

    <!-- Notification stuff -->
    <string name="tracking_notification_channel_name">Location Tracking</string>
    <string name="tracking_notice">Tracking your location</string>
    <string name="activity_summary_notification_channel_name">Activity Summary</string>
    <string name="activity_notification_text">Tap here to view your activity summary</string>

    <!-- Menu text -->
    <string name="options_menu">☰</string>
    <string name="show_chairlifts">Show Chairlifts</string>
    <string name="hide_chairlifts">Hide Chairlifts</string>
    <string name="show_beginner">Show Beginner Runs</string>
    <string name="hide_beginner">Hide Beginner Runs</string>
    <string name="show_intermediate">Show Intermediate Runs</string>
    <string name="hide_intermediate">Hide Intermediate Runs</string>
    <string name="show_advanced">Show Advanced Runs</string>
    <string name="hide_advanced">Hide Advanced Runs</string>
    <string name="night_runs">Only Show Night Runs</string>
    <string name="all_runs">Show All Runs</string>
    <string name="activity_summary">View activity summary</string>

    <!-- Activity summary -->
    <string name="activity_summary_title">Activity Summary</string>
    <string name="total_runs">Total runs: %d</string>
    <string name="max_speed">Max Speed: %d mph</string>
    <string name="average_speed">Average Speed: %d mph</string>

    <!-- Skiing activity layout -->
    <string name="icon_description">Location icon</string>
    <string name="arrow"><![CDATA[>]]></string>

    <!-- Summary menu -->
    <string name="open_summary">Open other summary</string>
    <string name="export">Export to local storage</string>
    <string name="export_json">Export current activity as JSON</string>
    <string name="export_geojson">Export current activity as GeoJSON</string>
    <string name="share">Share current activity</string>
    <string name="share_json">Share current activity as JSON</string>
    <string name="share_geojson">Share current activity as GeoJSON</string>
    <string name="share_description">Share file using</string>
    <string name="import_activity">Import activity</string>
    <string name="privacy_policy">View Privacy Policy</string>

    <!-- File selection -->
    <string name="select_file">Select a date</string>
    <string name="cancel">Cancel</string>

    <!-- Debug view -->
    <string name="debug_view_title">Super Secret Debug View</string>
    <string name="previous_location_name">Previous location name: %s</string>
    <string name="previous_location_accuracy">Previous location accuracy: %f meters</string>
    <string name="previous_location_altitude">Previous location altitude: %f meters\n<i>±%f meters</i></string>
    <string name="previous_location_latitude">Previous location latitude: %f</string>
    <string name="previous_location_longitude">Previous location longitude: %f</string>
    <string name="previous_location_speed">Previous location speed: %f meters/second\n<i>±%f meters/second</i></string>
    <string name="current_location_name">Current location name: %s</string>
    <string name="current_location_accuracy">Current location accuracy: %f meters</string>
    <string name="current_location_altitude">Current location altitude: %f meters\n<i>±%f meters</i></string>
    <string name="current_location_latitude">Current location latitude: %f</string>
    <string name="current_location_longitude">Current location longitude: %f</string>
    <string name="current_location_speed">Current location speed: %f meters/second\n<i>±%f meters/second</i></string>
    <string name="vertical_direction">Vertical direction: %s</string>
    <string name="most_likely_chairlift">Most likely chairlift: %s</string>
    <string name="altitude_confidence">Altitude confidence: %s</string>
    <string name="speed_confidence">Speed confidence: %s</string>

    <!-- Toast text -->
    <string name="bounds_missing">Stopping location tracking due to missing bounds</string>
    <string name="out_of_bounds">Stopping location tracking as user is outside ski area bounds</string>
    <string name="starting_tracking">Starting location tracking</string>
    <string name="computing_location">Adding locations to map…</string>
    <string name="done">Done!</string>

</resources>