<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".debugview.DebugActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/previous_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_location_name" />

            <TextView
                android:id="@+id/previous_location_accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_location_accuracy" />

            <TextView
                android:id="@+id/previous_location_altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_location_altitude" />

            <TextView
                android:id="@+id/previous_location_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_location_latitude" />

            <TextView
                android:id="@+id/previous_location_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_location_longitude" />

            <TextView
                android:id="@+id/previous_location_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_location_speed" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location_name" />

            <TextView
                android:id="@+id/current_location_accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location_accuracy" />

            <TextView
                android:id="@+id/current_location_altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location_altitude" />


            <TextView
                android:id="@+id/current_location_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location_latitude" />

            <TextView
                android:id="@+id/current_location_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location_longitude" />

            <TextView
                android:id="@+id/current_location_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location_speed" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/altitude_confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/altitude_confidence"/>

        <TextView
            android:id="@+id/speed_confidence"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/speed_confidence"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vertical_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vertical_direction" />

        <TextView
            android:id="@+id/chairlift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/most_likely_chairlift" />

    </LinearLayout>

    <fragment
        android:id="@+id/debug_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18" />

</LinearLayout>