<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/show_chairlift"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_marginStart="@dimen/menu_edge_margin"
        android:layout_marginTop="@dimen/menu_image_top_margin"
        android:contentDescription="@string/show_chairlifts"
        android:src="@drawable/ic_chairlift"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/show_easy_runs"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_marginTop="@dimen/menu_image_top_margin"
        android:contentDescription="@string/show_beginner"
        android:src="@drawable/ic_easy"
        app:layout_constraintLeft_toRightOf="@id/show_chairlift"
        app:layout_constraintRight_toLeftOf="@id/show_moderate_runs"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/show_moderate_runs"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_marginTop="@dimen/menu_image_top_margin"
        android:layout_marginEnd="@dimen/menu_edge_margin"
        android:contentDescription="@string/show_intermediate"
        android:src="@drawable/ic_moderate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/show_difficult_runs"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_marginStart="@dimen/menu_edge_margin"
        android:layout_marginTop="@dimen/menu_image_top_margin"
        android:contentDescription="@string/show_advanced"
        android:src="@drawable/ic_difficult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_chairlift" />

    <Button
        android:id="@+id/show_night_runs"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/menu_image_top_margin"
        android:text="@string/night_runs"
        app:layout_constraintLeft_toRightOf="@id/show_difficult_runs"
        app:layout_constraintRight_toLeftOf="@id/launch_activity_summary"
        app:layout_constraintTop_toBottomOf="@id/show_easy_runs" />

    <Button
        android:id="@+id/launch_activity_summary"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/menu_image_top_margin"
        android:layout_marginEnd="@dimen/menu_edge_margin"
        android:text="@string/activity_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_moderate_runs" />

</androidx.constraintlayout.widget.ConstraintLayout>