<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintStart_toStartOf="@id/activity_container"
        app:layout_constraintTop_toTopOf="@id/activity_container" />

    <LinearLayout
        android:id="@+id/time_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/activity_container"
        app:layout_constraintTop_toTopOf="@id/activity_container">

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:textColor="@color/white"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed_container"
        android:orientation="vertical"
        app:layout_constraintRight_toLeftOf="@id/time_container"
        app:layout_constraintTop_toTopOf="@id/activity_container"
        android:layout_width="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/max_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:text="@string/max_speed" />

        <TextView
            android:id="@+id/average_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/average_speed" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toRightOf="@id/icon"
        app:layout_constraintRight_toLeftOf="@id/speed_container"
        app:layout_constraintTop_toTopOf="@id/activity_container">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp" />

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>